css/styles.css
/* ... */
/* --------------------------------------------------------------------
 * ## mobile menu toggle
 * -------------------------------------------------------------------- */
.s-header__menu-toggle {
    display  : none;
    width    : 6.8rem;
    height   : var(--header-height);
    position : absolute;
    top      : 0;
    right    : 1.6rem;
}

.s-header__menu-toggle span {
    display          : block;
    background-color : var(--color-text-dark);
    width            : 28px;
    height           : 2px;
    margin-top       : -1px;
    font             : 0/0 a;
    text-shadow      : none;
    color            : transparent;
    transition       : background-color 0.2s ease-in-out;
    position         : absolute;
    right            : 20px;
    top              : 50%;
    bottom           : auto;
    left             : auto;
}

.s-header__menu-toggle span::before,
.s-header__menu-toggle span::after {
    content             : "";
    width               : 100%;
    height              : 100%;
    background-color    : inherit;
    transition-duration : 0.2s, 0.2s;
    transition-delay    : 0.2s, 0s;
    position            : absolute;
    left                : 0;
}

.s-header__menu-toggle span::before {
    top                 : -8px;
    transition-property : top, transform;
}

.s-header__menu-toggle span::after {
    bottom              : -8px;
    transition-property : bottom, transform;
}

/* is clicked 
 */
.s-header__menu-toggle.is-clicked span {
    background-color : rgba(255, 255, 255, 0);
}

.s-header__menu-toggle.is-clicked span::before,
.s-header__menu-toggle.is-clicked span::after {
    background-color : var(--color-text-dark);
    transition-delay : 0s, 0.2s;
}

.s-header__menu-toggle.is-clicked span::before {
    top       : 0;
    transform : rotate(45deg);
}

.s-header__menu-toggle.is-clicked span::after {
    bottom    : 0;
    transform : rotate(-45deg);
}

/* ------------------------------------------------------------------- 
 * responsive:
 * site-header
 * ------------------------------------------------------------------- */
@media screen and (max-width: 1200px) {
    .s-header__nav a {
        font-size : 1.9rem;
    }
}

@media screen and (max-width: 1000px) {
    .s-header__nav a {
        font-size : 1.8rem;
        padding   : 0 1.4rem;
    }

    .s-header__social svg {
        height : 2.6rem;
        width  : 2.6rem;
    }
}

@media screen and (max-width: 900px) {
    .s-header {
        --header-height  : 8rem;
        display          : block;
        background-color : transparent;
    }

    .s-header__block {
        width            : 100%;
        height           : var(--header-height);
        background-color : var(--color-body);
        border-bottom    : 1px solid var(--color-border);
        box-shadow       : var(--box-shadow);
    }

    .s-header__branding {
        top : calc(var(--header-height) / 2);
    }

    .s-header__nav-wrap {
        display          : block;
        width            : 100%;
        max-width        : none;
        transform        : scaleY(0);
        transform-origin : center top;
        padding          : var(--vspace-2) 3.6rem var(--vspace-2);
        background-color : var(--color-body);
        border-bottom    : 1px solid var(--color-border);
        box-shadow       : var(--box-shadow);
    }

    .s-header__nav,
    .s-header__social {
        transform  : translateY(-2rem);
        opacity    : 0;
        visibility : hidden;
    }

    .s-header__nav {
        padding : 0 0 var(--vspace-1_25);
    }

    .s-header__nav a {
        font-family : var(--font-1);
        font-size   : var(--text-lg);
        font-weight : 400;
        line-height : var(--vspace-1);
        padding     : var(--vspace-0_375) 0;
    }

    .s-header__nav ul {
        display          : block;
        background-color : transparent;
        text-align       : left;
        margin           : 0;
        border           : none;
    }

    .s-header__nav ul li {
        display : block;
    }

    .s-header__social {
        position : static;
    }

    .s-header__menu-toggle {
        display : block;
    }

    .menu-is-open .s-header {
        height : auto;
    }

    .menu-is-open .s-header__block {
        box-shadow : none;
    }

    .menu-is-open .s-header__nav-wrap {
        transform        : scaleY(1);
        transition       : transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
        transition-delay : 0s;
    }

    .menu-is-open .s-header__nav,
    .menu-is-open .s-header__social {
        transform        : translateY(0);
        opacity          : 1;
        visibility       : visible;
        transition       : all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
        transition-delay : .4s;
    }
}



/* ===================================================================
 * # INTRO
 *
 *
 * ------------------------------------------------------------------- */
.s-intro {
    padding-top : 12rem;
    width       : 100%;
    position    : relative;
}

.s-intro__content {
    position : relative;
}

/* --------------------------------------------------------------------
 * ## intro text
 * -------------------------------------------------------------------- */
.s-intro__text {
    z-index    : 2;
    width      : 100%;
    text-align : center;
    position   : relative;
    padding    : 3rem 0 2.5rem;
}

.s-intro__text h3 {
    font-family    : var(--font-1);
    font-size      : var(--text-xxxl);
    font-weight    : 400;
    line-height    : 1.0998;
    letter-spacing : -.01em;
    margin-top     : 0;
    color          : white;
}

.s-intro__text h3 span {
    color : white;
}

.s-intro__text-huge {
    --text-huge-size : 8rem;
    font-size        : var(--text-huge-size);
    line-height      : 1.1;
    letter-spacing   : -0.02em;
    margin-top       : 0;
    margin-bottom    : 0;
    color            : #0e0e0e;
}
/* ... */

